fix: minor spacing adjustment

--- a/src/style.css
+++ b/src/style.css
@@ -12,27 +12,33 @@ body {
 }
 
 intro-section {
-  display: block;
+  display: flex;
+  justify-content: center;
   margin-bottom: 64px;
 
   @media screen and (max-width: 800px) {
     margin-bottom: 32px;
+  }
+  
+  @media screen and (max-width: 600px) {
     padding-inline: 16px;
   }
 }
 
 advantages-section {
-  display: block;
+  display: flex;
+  justify-content: center;
   margin-bottom: 128px;
   padding-inline: 16px;
 
   @media screen and (max-width: 800px) {
-    margin-bottom: 64px;
+    margin-bottom: 80px;
   }
 }
 
 rules-section {
-  display: block;
+  display: flex;
+  justify-content: center;
   margin-bottom: 128px;
   padding-inline: 16px;
 
